Rename proposal_type to type
