# server/db/proposals_query.py
@@ -31,8 +31,9 @@ async def fetch_all_proposal_resources(conn, head_block_num, start, limit):
         .slice(start, start+limit)\
         .map(lambda proposal: proposal.merge({
             'id': proposal['proposal_id'],
+            'type': proposal['proposal_type'],
             'object': proposal['object_id'],
-            'target': proposal['target_id'],
+            'target': proposal['target_id']
         }))\
         .map(lambda proposal: (proposal['metadata'] == "").branch(
             proposal.without('metadata'), proposal
@@ -41,6 +42,7 @@ async def fetch_all_proposal_resources(conn, head_block_num, start, limit):
             'start_block_num',
             'end_block_num',
             'proposal_id',
+            'proposal_type',
             'object_id',
             'target_id'
         )\
@@ -54,8 +56,9 @@ async def fetch_proposal_resource(conn, proposal_id, head_block_num):
                 & (head_block_num < r.row['end_block_num']))\
         .map(lambda proposal: proposal.merge({
             'id': proposal['proposal_id'],
+            'type': proposal['proposal_type'],
             'object': proposal['object_id'],
-            'target': proposal['target_id'],
+            'target': proposal['target_id']
         }))\
         .map(lambda proposal: (proposal['metadata'] == "").branch(
             proposal.without('metadata'), proposal
@@ -64,6 +67,7 @@ async def fetch_proposal_resource(conn, proposal_id, head_block_num):
             'start_block_num',
             'end_block_num',
             'proposal_id',
+            'proposal_type',
             'object_id',
             'target_id'
         )\
